# testgo

./: .bazelrc  BUILD.bazel  Makefile  README.md  WORKSPACE  go.mod
a/: BUILD.bazel  a.go  a_test.go
b/: BUILD.bazel  b.go
cgo/: BUILD.bazel  cgo.c  cgo.go  cgo.h
foo/: BUILD.bazel  foo.go  foo_test.go
