load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["a.go"],
    importpath = "github.com/martinxsliu/testgo/a",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["a_test.go"],
    embed = [":go_default_library"],
    deps = ["//b:go_default_library"],
)
