load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    # keep
    srcs = ["cgo.go"],
    cdeps = [":cgo_a"],
    cgo = True,
    clinkopts = ["cgo/cgo.a"],
    copts = ["-Icgo/cgo"],
    importpath = "github.com/martinxsliu/testgo/cgo",
    visibility = ["//visibility:public"],
)

cc_import(
    name = "cgo_a",
    hdrs = ["cgo.h"],
    static_library = "cgo.a",
)
