load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
load("@com_github_jmhodges_bazel_gomock//:gomock.bzl", "gomock")
load("//gen:gen.bzl", "gen")

gen(
    name = "foogen",
    out = "foogen.go",
)

go_library(
    name = "go_default_library",
    # keep
    srcs = [
        "foo.go",
        "foogen.go",
    ],
    importpath = "github.com/martinxsliu/testgo/foo",
    visibility = ["//visibility:public"],
)

gomock(
    name = "gomock",
    library = ":go_default_library",
    out = "gomock.go",
    interfaces = ["Greeter"],
    package = "foo",
)

go_test(
    name = "go_default_test",
    # keep
    srcs = [
        "foo_test.go",
        "gomock.go",
    ],
    embed = [":go_default_library"],
)
